--- a/portals.yaml
+++ b/portals.yaml
@@ -1,6 +1,10 @@
-koupic: [-820.5, -374]
-inspi: [-820.5, -374]
-plouffi: [-820.5, -374]
 house: [-820.5, -374]
-koku: [-820.5, -374]
-halaqqch: [-820.5, -374]
+koupic: [-992.5, -250]
+rou: [-904.5, -403]
+inspi: [-932.5, -563]
+koku: [-0, -0]
+phanalya: [-0, -0]
+halaqqch: [-0, -0]
+redspine: [-0, -0]
+plouffi: [-0, -0]
+
