added coords of fiew peoples

--- a/portals.yaml
+++ b/portals.yaml
@@ -4,5 +4,7 @@ rou: [-904.5, -403]
 inspi: [-932.5, -563]
 koku: [-1050, -270]
 phanalya: [-1040, -140]
-halaqqch: [-700, -430]
+halaqqch: [-863, -479]
 redspine: [-900, -200]
+plouffi: [-709 , -427]
+getkey: [-900, -350]
