useless code that we will never use

--- a/portals.yaml
+++ b/portals.yaml
@@ -1,10 +1,12 @@
-house: [-820.5, -374]
-koupic: [-792.5, -250]
-rou: [-904.5, -403]
-inspi: [-932.5, -563]
-koku: [-1050, -270]
-phanalya: [-1040, -140]
-halaqqch: [-863, -479]
-redspine: [-900, -200]
-plouffi: [-1880 , 460]
-getkey: [-900, -350]
+#house: [[-822, 70, -375], [-821, 72, -375]]
+#koupic: [[-793, 105, -249], [-791, 107, -249]]
+#rou: [[-906, 62, -404], [-905, 64, -404]]
+#inspi: [[-945, 63, -581], [-944, 66, -581]]
+#koku: [[-1083, 66, -310], [-1081, 68, -310]]
+#phanalya: [[-1033, 63, -88], [-1032, 65, -88]]
+#halaqqch: [[-866, 62, -482], [-864, 64, -482]]
+#redspine: [[-943, 63, -120], [-941, 65, -120]]
+#getkey: [[-981, 63, -326], [-981, 65, -324]]
+A: [[9, 94, 39], [11, 96, 39]]
+B: [[-14, 73, -61], [-14, 75, -59]]
+C: [[80, 96, 2], [80, 98, 4]]
